--- a/FilumDLWPF.csproj
+++ b/FilumDLWPF.csproj
@@ -7,7 +7,7 @@
     <Company>Blaze Devs</Company>
     <Authors>Shubhojeet Choudhury, Blaze Devs</Authors>
     <PackageIcon>LogoSummerB.ico</PackageIcon>
-    <Version>1.2.0</Version>
+    <Version>1.3.0</Version>
     <VersionPrefix>v</VersionPrefix>
     <PackageIconUrl />
     <PackAsTool>False</PackAsTool>
@@ -23,8 +23,9 @@
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <UseWindowsForms>False</UseWindowsForms>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
     <ProduceReferenceAssembly>True</ProduceReferenceAssembly>
+    <SupportedOSPlatformVersion>8.0</SupportedOSPlatformVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -50,9 +51,21 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+    <PackageReference Include="SharpGrabber" Version="2.1.0" />
+    <PackageReference Include="SharpGrabber.Converter" Version="1.1.0" />
+    <PackageReference Include="SharpGrabber.Hls" Version="1.3.0" />
+    <PackageReference Include="SharpGrabber.Instagram" Version="0.1.0" />
+    <PackageReference Include="SharpGrabber.Vimeo" Version="1.0.0" />
+    <PackageReference Include="SharpGrabber.YouTube" Version="1.5.0" />
     <PackageReference Include="System.Runtime" Version="4.3.1" />
-    <PackageReference Include="YoutubeExplode" Version="6.2.5" />
-    <PackageReference Include="YoutubeExplode.Converter" Version="6.2.5" />
+    <PackageReference Include="YoutubeExplode" Version="6.2.15" />
+    <PackageReference Include="YoutubeExplode.Converter" Version="6.2.15" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="SharpGrabber">
+      <HintPath>C:\Users\shubh\.nuget\packages\sharpgrabber\2.1.0\lib\netstandard2.0\SharpGrabber.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
   <ItemGroup>
