--- a/FilumDLWPF.csproj
+++ b/FilumDLWPF.csproj
@@ -3,11 +3,11 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <UseWPF>true</UseWPF>
-    <ApplicationIcon>LogoSummerB.ico</ApplicationIcon>
+    <ApplicationIcon>Images\LogoSummer.ico</ApplicationIcon>
     <Company>Blaze Devs</Company>
     <Authors>Shubhojeet Choudhury, Blaze Devs</Authors>
-    <PackageIcon>LogoSummerB.ico</PackageIcon>
-    <Version>1.3.0</Version>
+    <PackageIcon>LogoSummer.ico</PackageIcon>
+    <Version>1.4.0</Version>
     <VersionPrefix>v</VersionPrefix>
     <PackageIconUrl />
     <PackAsTool>False</PackAsTool>
@@ -26,6 +26,7 @@
     <Nullable>disable</Nullable>
     <ProduceReferenceAssembly>True</ProduceReferenceAssembly>
     <SupportedOSPlatformVersion>8.0</SupportedOSPlatformVersion>
+    <StartupObject>FilumDLWPF.App</StartupObject>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -43,13 +44,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="Images\LogoSummer.ico" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
-    <PackageReference Include="SharpGrabber" Version="2.1.0" />
-    <PackageReference Include="SharpGrabber.Converter" Version="1.1.0" />
-    <PackageReference Include="SharpGrabber.Hls" Version="1.3.0" />
-    <PackageReference Include="SharpGrabber.Instagram" Version="0.1.0" />
-    <PackageReference Include="SharpGrabber.Vimeo" Version="1.0.0" />
-    <PackageReference Include="SharpGrabber.YouTube" Version="1.5.0" />
+    <PackageReference Include="RestSharp" Version="110.2.0" />
+    <PackageReference Include="SpotifyAPI.Web" Version="7.0.0" />
+    <PackageReference Include="SpotifyAPI.Web.Auth" Version="7.0.0" />
     <PackageReference Include="System.Runtime" Version="4.3.1" />
     <PackageReference Include="YoutubeExplode" Version="6.2.15" />
     <PackageReference Include="YoutubeExplode.Converter" Version="6.2.15" />
