--- a/FilumDLWPF.csproj
+++ b/FilumDLWPF.csproj
@@ -7,7 +7,7 @@
     <Company>Blaze Devs</Company>
     <Authors>Shubhojeet Choudhury, Blaze Devs</Authors>
     <PackageIcon>LogoSummer.ico</PackageIcon>
-    <Version>1.4.0</Version>
+    <Version>1.4.5</Version>
     <VersionPrefix>v</VersionPrefix>
     <PackageIconUrl />
     <PackAsTool>False</PackAsTool>
@@ -16,7 +16,7 @@
     <RepositoryUrl>https://github.com/blaze-shubhojeet14/FilumDLWPF</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <Title>Filum-DL</Title>
-    <Description>The ultimate GUI file downloader for Windows based on WPF and .NET</Description>
+    <Description>An advanced content downloader with multiple supported platforms based on .NET!</Description>
     <NeutralLanguage>en</NeutralLanguage>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <GenerateDocumentationFile>False</GenerateDocumentationFile>
@@ -57,11 +57,6 @@
     <PackageReference Include="YoutubeExplode.Converter" Version="6.2.15" />
   </ItemGroup>
 
-  <ItemGroup>
-    <Reference Include="SharpGrabber">
-      <HintPath>C:\Users\shubh\.nuget\packages\sharpgrabber\2.1.0\lib\netstandard2.0\SharpGrabber.dll</HintPath>
-    </Reference>
-  </ItemGroup>
 
   <ItemGroup>
     <Resource Include="Logo.ico" />
